# RebelCAD

./: CMakeLists.txt  README.md  RebelCAD_Completion_Roadmap.md  RebelCAD_Detailed_Development_Checklist.md  RebelCAD_Development_Procedure.md  RebelCAD_Feature_Checklist.md  RebelCAD_Final_Goal_Tracking.md  RebelCAD_Progress_Tracker.md  RebelCAD_Task_Assignment_Template.md  RebelCAD_Task_Assignments_Sprint_1.md  RebelCAD_Tracking_README.md  RebelCAD_Weekly_Progress_2025-03-19.md  RebelCAD_Weekly_Progress_2025-03-21.md  RebelCAD_Weekly_Progress_2025-03-22.md  RebelCAD_Weekly_Progress_2025-03-23.md  RebelCAD_Weekly_Progress_2025-03-24.md  RebelCAD_Weekly_Progress_Template.md  ai_debug.bat  ai_debug.sh  build.bat  build.sh  build_tools.bat  download_eigen.ps1  download_glad.ps1  download_imgui.ps1
.github/workflows/: ci.yml
build_new/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RebelCAD.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build_new/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  simulation_tests.vcxproj  simulation_tests.vcxproj.filters
build_simulation/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  RebelCAD.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build_simulation/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  non_linear_solver_example.vcxproj  non_linear_solver_example.vcxproj.filters
build_simulation/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  simulation_tests.vcxproj  simulation_tests.vcxproj.filters
docs/: AI_Assisted_Development.md  BuildAndDebugStrategy.md  CMake_Strategy.md  NonLinearSolver.md
docs/assembly/: AssemblyTree.md  ComponentPositioner.md  CylindricalJoint.md  ExplodedView.md  FixedJoint.md  PrismaticJoint.md  RevoluteJoint.md
docs/constraints/: AngleConstraint.md  AutoConstraintDetector.md  ConcentricConstraint.md  ConstraintManagerUI.md  LengthConstraint.md  ParallelConstraint.md  PerpendicularConstraint.md  RadiusConstraint.md  TangentConstraint.md
docs/core/: CommandSystem.md  EventSystem.md  FileFormat.md  GarbageCollector.md  MemoryLeakDetector.md  MemoryPool.md  OperationQueue.md  SmartResourceManager.md  ThreadingFramework.md  TransactionSystem.md
docs/development/: AI_PROMPT.md  BUILD_STATUS.md  CONTEXT_NOTES.md  CURRENT_FEATURE.md  CURRENT_MODULE.md  NEXT_STEPS.md
docs/graphics/: CameraCollision.md  CameraController.md  ObjectPicker.md  RayCasting.md  SceneGraph.md  SceneSerialization.md  SpatialPartitioning.md  ViewSyncManager.md  ViewTransitionManager.md  Viewport.md
docs/images/: logo.txt
docs/modeling/: ChamferTool.md  DraftTool.md  ExtrudeTool.md  FilletTool.md  IntersectTool.md  LoftTool.md  NurbsSurface.md  OffsetSurfaceTool.md  PatchSurface.md  PatternTool.md  RevolveTool.md  ShellTool.md  SubdivisionBooleanOperations.md  SubdivisionSurface.md  SubtractTool.md  SweepTool.md  UnionTool.md
docs/simulation/: FEA_System.md  LinearStaticSolver.md  MeshGenerator.md
docs/sketching/: Arc.md  BezierCurve.md  ChamferTool.md  Circle.md  ExtendTool.md  FilletTool.md  Line.md  MirrorTool.md  OffsetTool.md  Polygon.md  Rectangle.md  Spline.md  TrimTool.md
docs/ui/: ContextMenuSystem.md  DockingSystem.md  MainWindow.md  MultiMonitorSupport.md  PatternToolDialog.md  ThemeSystem.md  ToolbarSystem.md  WindowManager.md  WorkspaceManager.md
examples/: CMakeLists.txt  NonLinearSolverExample.cpp
include/: README.md
include/constraints/: README.md
include/core/: Application.h  Error.h  Log.h
include/graphics/: GraphicsSystem.h  README.md
include/modeling/: README.md
include/simulation/: BoundaryCondition.h  DynamicSolver.h  FEAResult.h  FEASystem.h  LinearStaticSolver.h  Load.h  Material.h  Mesh.h  NonLinearSolver.h  ThermalBoundaryConditions.h  ThermalLoads.h  ThermalSolver.h
include/ui/: AssetBrowserPanel.h
scripts/: README.md  ai_debug_workflow.ps1  analyze_log_chunks.ps1  build_component.ps1  debug_incremental.ps1  filter_logs.ps1  rebuild_modified.ps1  rotate_logs.ps1  run_tests_by_category.ps1  test_component.ps1
src/assembly/: Component.cpp  Component.h  README.md
src/constraints/: AngleConstraint.cpp  AngleConstraint.h  AngleConstraintTests.cpp  AutoConstraintDetector.cpp  AutoConstraintDetector.h  AutoConstraintDetectorTests.cpp  ConcentricConstraint.cpp  ConcentricConstraint.h  ConcentricConstraintTests.cpp  Constraint.h  LengthConstraint.cpp  LengthConstraint.h  LengthConstraintTests.cpp  ParallelConstraint.cpp  ParallelConstraint.h  ParallelConstraintTests.cpp  PerpendicularConstraint.cpp  PerpendicularConstraint.h  PerpendicularConstraintTests.cpp  RadiusConstraint.cpp  RadiusConstraint.h  (+4 more)
src/core/: Application.cpp  CMakeLists.txt  Error.cpp  Log.cpp  README.md
src/simulation/: BoundaryCondition.cpp  CMakeLists.txt  DynamicSolver.cpp  DynamicSolverTest.cpp  FEAResult.cpp  FEAResultAccessors.cpp  FEAResultComputation.cpp  FEAResultCore.cpp  FEAResultIO.cpp  FEAResultModifiers.cpp  FEAResultStatistics.cpp  FEAResultStructures.cpp  FEASystem.cpp  FEASystemSimpleTest.cpp  FEASystemTestProgram.cpp  FEATest.cpp  LinearStaticSolver.cpp  Load.cpp  Material.cpp  Mesh.cpp  NonLinearSolver.cpp  NonLinearSolverTest.cpp  ThermalBoundaryConditions.cpp  ThermalBoundaryConditions.h  ThermalLoads.cpp  ThermalLoads.h  ThermalResult.cpp  ThermalSolver.cpp  ThermalSolver.h  ThermalSolverAssembly.cpp  ThermalSolverBoundaryConditions.cpp  ThermalSolverCore.cpp  ThermalSolverElements.cpp  ThermalSolverResults.cpp  ThermalSolverShapeFunctions.cpp  ThermalSolverSolvers.cpp  ThermalSolverTimeIntegration.cpp
src/simulation/dynamic/: CMakeLists.txt
src/simulation/fea/: CMakeLists.txt
src/simulation/nonlinear/: CMakeLists.txt
src/simulation/thermal/: CMakeLists.txt
tests/: CMakeLists.txt
tests/assembly/constraints/: ConstraintSolverTests.cpp
tests/modeling/parametric/: ConfigurationManagerTests.cpp  ConfigurationTests.cpp  DesignTableTests.cpp  ParametricModelingTest.cpp
tests/simulation/: BoundaryConditionTests.cpp  CMakeLists.txt  FEASystemTests.cpp  LoadTests.cpp  MaterialTests.cpp  README.md
tests/ui/: README.md
(+241 files in other folders)
